# VideoPLayer

./: CMakeLists.txt  main.cpp
